# podcast_workflow_mvp

./: .gitignore  Podcast_Workflow_MVP.postman_collection.json  README.md  docker-compose.yml  render.yaml
avatar_service/: Dockerfile  pyproject.toml
avatar_service/src/: __init__.py  api.py  avatar_processor.py  database.py  hedra_service.py  main.py  models.py  storage.py
react_admin_ui/: Dockerfile  package-lock.json  package.json
react_admin_ui/public/: index.html
react_admin_ui/src/: App.css  App.js  config.js  index.css  index.js
react_admin_ui/src/components/: CharacterCard.js  CharacterClonesPanel.js  CreateCharacterModal.js  CreateScriptModal.js  EditImageModal.js  EditScriptModal.js  EpisodesPanel.js  ScriptCard.js  ScriptLine.js  ScriptsPanel.js  index.js
react_admin_ui/src/services/: scriptService.js  voiceService.js
react_admin_ui/src/utils/: formatUtils.js  imageUtils.js
script_service/: Dockerfile  pyproject.toml
script_service/src/: langchain_prompts.py  main.py  models.py  script_generator.py
stitch_service/: Dockerfile  pyproject.toml
stitch_service/src/: __init__.py  api.py  database.py  main.py  models.py  stitch_processor.py  storage.py
tts_service/: Dockerfile  pyproject.toml
tts_service/src/: __init__.py  api.py  database.py  main.py  models.py  storage.py  tts_processor.py
voice_service/: Dockerfile  pyproject.toml
voice_service/src/: __init__.py  database.py  elevenlabs_client.py  main.py  models.py  storage.py  utils.py
