[tool.poetry]
name = "avatar_service"
version = "0.1.0"
description = "Service for creating talking-head clips with Hedra"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
hedra-python = "^0.1.0"
pydantic = "^2.3.0"
httpx = "^0.28.1"
python-multipart = "^0.0.6"
supabase = "^2.15.1"  # Pin to specific stable version to fix proxy issues

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
