[tool.poetry]
name = "script_service"
version = "0.1.0"
description = "Service for generating structured dialogue scripts"
authors = ["Manus AI"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100"
uvicorn = {extras = ["standard"], version = "^0.22"}
pydantic = "^2.0"
httpx = "^0.24"
psycopg2-binary = "^2.9.5" # For Postgres
sqlalchemy = "^2.0"
celery = "^5.3"
redis = "^4.6"
openai = "^0.28" # Or the latest version for OpenAI API
python-multipart = "0.0.20" # For form handling

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

