[tool.poetry]
name = "script_service"
version = "0.1.0"
description = "Service for generating podcast scripts"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
langchain = "^0.3.0"
langchain-openai = "^0.3.18"
openai = "^1.68.2"
pydantic = "^2.3.0"
python-multipart = "^0.0.6"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

