[tool.poetry]
name = "stitch_service"
version = "0.1.0"
description = "Service for concatenating video clips using FFmpeg"
authors = ["Manus AI"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100" # Though a worker, might have health checks or utility endpoints
uvicorn = {extras = ["standard"], version = "^0.22"}
pydantic = "^2.0"
celery = "^5.3"
redis = "^4.6"
psycopg2-binary = "^2.9.5" # For updating script status in Postgres
sqlalchemy = "^2.0"
# boto3 and botocore are removed as S3 is not used
# FFmpeg is a system dependency, installed in Dockerfile

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

